# omarchy-local-tts

./: .gitignore  README.md  config.json  setup.sh  start-server.sh
scripts/: setup_voices.py
server/: __init__.py  config.py  db.py  main.py  pyproject.toml  ui.py
voices/: voices.json
